# rust-backend

./: .env  .gitignore  Cargo.toml  readme.md
entity/: Cargo.toml
entity/src/: cat.rs  lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: config.rs  db_connect.rs  error.rs  lib.rs  main.rs
