[package]
name = "rust-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.7.5"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
config = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"
serde_json = "1.0.119"

[dependencies.sea-orm]
version = "0.12"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"]
default-features = false
